--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <label><H1><B>Calcule seu IMC</B></H1></label>
         <form action="" class="form">
-            <p>Peso: <input type="number" class="peso" step="0.1"></p><br>
-            <p>Altura: <input type="number" class="altura" step="0.1"></p>
+            <p>Peso (kg): <input type="number" class="peso" step="0.1"></p><br>
+            <p>Altura (m): <input type="number" class="altura" step="0.1"></p>
             <button>Enviar</button>
         </form>
         <div class="resultado"></div>
